--- a/popup.css
+++ b/popup.css
@@ -193,7 +193,7 @@ ul#tabsPanel li.active:after {
 .header {
   width: 80%;
   height: 18px;
-  margin-top: -24px;
+  margin-top: -3px;
   /* margin-left: 10px; */
   vertical-align: middle;
   border-radius: 7px;
@@ -290,7 +290,7 @@ input[type="color"] {
   text-align: center;
   color: #888;
   display: block;
-  margin-top: -50px;
+  margin-top: -22px;
 }
 #lblSelectionsNone {
   width: 228px;
@@ -303,6 +303,11 @@ input[type="color"] {
   font-style: italic;
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+#selections {
+  overflow-y: scroll; 
+  height: 190px;
 }
 
 ul {
